--- a/wnr/signin.html
+++ b/wnr/signin.html
@@ -22,13 +22,14 @@
     <div class="container form_section-container">
         <h2>Sign In</h2>
         <div class="alert_message success">
-            <p>This is an success message</p>
+
         </div>
         <form action="">
             <input type="email" placeholder="Username or Email">
             <input type="password" placeholder="Password">
             <button type="submit" class="btn">Sign In</button>
             <small>Don't have an account? <a href="signup.html">Sign Up</a></small>
+            <a href="forgot pass.html">Forgot Password</a></small>
         </form>
     </div>
 </section>
