--- a/wnr/home.html
+++ b/wnr/home.html
@@ -12,14 +12,15 @@
         <!--GOOGLE FONT-->
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" 
         rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 
     </head>
     <body>
         <nav>
             <div class="container nav_container">
-                <a href="index.html"></a>
-                <img src="img/wnr.png" class="nav_logo">
+                <a href="home.html"></a>
+                <img src="img/logo.png" class="nav_logo">
                     
                 <ul class="nav_items">
                     <li><a href="home.html">Home</a></li>
@@ -29,10 +30,10 @@
                    <!-- <li><a href="signin.html">Signin</a></li>-->
                     <li class="nav_profile">
                         <div class="avatar">
-                            <img src="img/homee.jpg">
+                            <img src="img/profile.jpg">
                         </div>
                         <ul>
-                            <li><a href="dashboard.html">Account</a></li>
+                            <li><a href="account.html">Account</a></li>
                             <li><a href="logout.html">Logout</a></li>
                         </ul>
                     </li>
@@ -42,93 +43,91 @@
                 <button id="close_nav-btn"><i class="uil uil-multiply"></i></button>
             </div>
         </nav>
-
-    <div class="container">
-        <div class="row">
-        <div class="col-md-12">
+        <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  </ol>
-                  <div class="carousel-inner">
+                </ol>
+                <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <div class=" row">
-                        <div class="col-md-4">
-                            <div class="single-box">
-                                <div class="img-area"><img src="img/nmp.jpg"></div>
-                                <div class="img-text">
-                                    <h2>WNR Journal</h2>
-                                    <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/ex.jpeg" alt="Image 1"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
                             </div>
-                      </div>
-                  <div class="col-md-4">
-                    <div class="single-box">
-                        <div class="img-area"><img src="img/qq.jpeg"></div>
-                        <div class="img-text">
-                            <h2>WNR Journal</h2>
-                            <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/qq.jpeg" alt="Image 2"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/qqq.webp" alt="Image 3"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-              </div>
-              <div class="col-md-4">
-                <div class="single-box">
-                    <div class="img-area"><img src="img/qqq.webp"></div>
-                    <div class="img-text">
-                        <h2>WNR Journal</h2>
-                        <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/ww.jpeg" alt="Image 4"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/books.jpeg" alt="Image 5"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="single-box">
+                                    <div class="img-area"><img src="img/qq.jpeg" alt="Image 6"></div>
+                                    <div class="img-text">
+                                        <h2>WNR Journal</h2>
+                                        <p>WNR Journal is a platform that provides you with the latest stories of the world.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-          </div>
-          <div class="col-md-4">
-            <div class="single-box">
-                <div class="img-area"><img src="img/ww.jpeg"></div>
-                <div class="img-text">
-                    <h2>WNR Journal</h2>
-                    <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
-             </div>
-              </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-        <div class="carousel-item active">
-            <div class=" row">
-              <div class="col-md-4">
-                  <div class="single-box">
-                      <div class="img-area"><img src="img/qqq.webp"></div>
-                      <div class="img-text">
-                          <h2>WNR Journal</h2>
-                          <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
-                  </div>
-            </div>
-        <div class="col-md-4">
-          <div class="single-box">
-              <div class="img-area"><img src="img/ww.jpeg"></div>
-              <div class="img-text">
-                  <h2>WNR Journal</h2>
-                  <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
-          </div>
-    </div>
-    <div class="col-md-4">
-      <div class="single-box">
-          <div class="img-area"><img src="img/nmp.jpg"></div>
-          <div class="img-text">
-              <h2>WNR Journal</h2>
-              <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
-      </div>
-</div>
-<div class="col-md-4">
-  <div class="single-box">
-      <div class="img-area"><img src="img/qq.jpeg"></div>
-      <div class="img-text">
-          <h2>WNR Journal</h2>
-          <p>WNR Journal is a platform that provides you with the latest stories of the world. </p>
-  </div>
-</div>
-  </div>
-  
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="./main.js">
 
         </script>
